app/src/main/java/com/example/bookclub/errors/StudyCommentContentNotExistedException.java
package com.example.bookclub.errors;

public class StudyCommentContentNotExistedException extends RuntimeException {
	public StudyCommentContentNotExistedException() {
		super("StudyComment Not Existed");
	}
}
